[gd_scene load_steps=4 format=2]

[ext_resource path="res://quiz/SinglePlayerQuiz/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://quiz/SinglePlayerQuiz/AnswerField.tscn" type="PackedScene" id=2]
[ext_resource path="res://quiz/SinglePlayerQuiz/QuizField.gd" type="Script" id=3]

[node name="QuizField" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerField" parent="." instance=ExtResource( 2 )]
anchor_left = 0.001
anchor_top = 0.68
anchor_bottom = 1.002
margin_left = 0.976
margin_top = -220.0
margin_right = -4.0
margin_bottom = 6.79993

[node name="Player" parent="." instance=ExtResource( 1 )]
anchor_left = 0.066
anchor_top = 0.22
anchor_right = 0.255
anchor_bottom = 0.653
margin_left = -0.433792
margin_top = 0.00469971
margin_right = 0.0301819
margin_bottom = 0.204651

[node name="Enemy" parent="." instance=ExtResource( 1 )]
anchor_left = 0.714
anchor_top = 0.239
anchor_right = 0.897
anchor_bottom = 0.672
margin_left = -0.452087
margin_top = 0.0833588
margin_right = 6.15594
margin_bottom = 0.283295

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.194
anchor_top = 0.107
anchor_right = 0.623
anchor_bottom = 0.737
margin_left = 3.17242
margin_top = -0.200005
margin_right = 2.8764
margin_bottom = -0.200043
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequestQuiz" type="HTTPRequest" parent="."]

[node name="HTTPRequestQuestion" type="HTTPRequest" parent="."]

[node name="LoadingPopUp" type="PopupDialog" parent="."]
visible = true
anchor_left = 0.224
anchor_top = 0.232
anchor_right = 0.695
anchor_bottom = 0.74
margin_left = -0.376007
margin_top = -0.200012
margin_right = 0.319946

[node name="Label" type="Label" parent="LoadingPopUp"]
anchor_left = 0.262
anchor_top = 0.295
anchor_right = 0.689
anchor_bottom = 0.574
margin_left = 0.0760574
margin_top = 0.109329
margin_right = -0.164948
margin_bottom = 0.014328
text = "Loading Questions"
